fixed issues of unique key for each language tag and tech tag, deleted unnecessary import of InfoCard from FeaturedProject component, and increased z-index value of navbar

--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -11,7 +11,7 @@
   justify-content: space-between;
   @include bgStyle;
   opacity: 0.9;
-  z-index: 300;
+  z-index: 2000;
 
   .icon-container {
     width: 30%;
